--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@edgestore/server": "^0.1.4",
     "@fontsource/poppins": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@headlessui/react": "^2.2.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -23,8 +24,9 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "convex": "^1.4.1",
     "emoji-picker-react": "^4.5.7",
