--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.287.0",
     "next": "^15.3.4",
     "next-themes": "^0.2.1",
+    "nextjs": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
