--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "convex:codegen": "npx convex codegen",
-    "convex:deploy": "npx convex deploy",
-    "convex:dev": "npx convex dev"
+    "start": "next start --hostname 127.0.0.1 --port 3000",
+    "lint": "next lint"
   },
   "dependencies": {
     "@blocknote/core": "^0.9.6",
