--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --hostname 127.0.0.1 --port 3000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "lucide-react": "^0.287.0",
     "next": "^15.3.4",
     "next-themes": "^0.2.1",
+    "nextjs": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -55,4 +56,4 @@
     "tailwindcss": "^3",
     "typescript": "^5"
   }
- }
+}
