--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "emoji-picker-react": "^4.5.7",
     "lucide-react": "^0.287.0",
     "next": "^15.3.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.5.3",
-    "react-tooltip": "5.29.1",
+    "react-tooltip": "^5.29.1",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -48,14 +49,14 @@
     "zustand": "^4.4.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.19.9",
+    "@types/react": "18.3.23",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
