--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
     "@vercel/analytics": "1.5.0",
     "class-variance-authority": "^0.7.0",
@@ -39,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-tabs": "^6.1.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tooltip": "^5.29.1",
     "sonner": "^1.0.3",
