--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/poppins": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.4",
+    "@neondatabase/serverless": "github:neondatabase/serverless",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
