--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "convex": "^1.4.1",
+    "drizzle-orm": "^0.44.4",
     "emoji-picker-react": "^4.5.7",
     "lucide-react": "^0.287.0",
     "next": "^15.3.4",
@@ -57,6 +58,7 @@
     "@types/react": "18.3.23",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
