--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
+    "@stackframe/stack": "^2.8.27",
     "@vercel/analytics": "1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "convex": "^1.4.1",
     "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.2",
     "emoji-picker-react": "^4.5.7",
-    "lucide-react": "^0.287.0",
+    "lucide-react": "^0.321.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
