--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fontsource/poppins": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.4",
-    "@neondatabase/serverless": "github:neondatabase/serverless",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -33,9 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
-    "convex": "^1.4.1",
-    "drizzle-orm": "^0.44.4",
-    "drizzle-zod": "^0.8.2",
+    "convex": "1.25.4",
     "emoji-picker-react": "^4.5.7",
     "lucide-react": "^0.321.0",
     "next": "^15.3.4",
@@ -58,8 +55,7 @@
     "@types/node": "20.19.9",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "drizzle-kit": "^0.31.4",
+    "autoprefixer": "^10";
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
