--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "^15.3.4",
     "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
