--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cmdk": "^0.2.0",
     "convex": "1.25.4",
     "emoji-picker-react": "^4.5.7",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.321.0",
     "next": "^15.3.4",
     "next-themes": "^0.2.1",
