--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@blocknote/core": "^0.9.6",
     "@blocknote/react": "^0.9.6",
-    "@clerk/nextjs": "^6.23.1",
+    "@clerk/nextjs": "^6.31.1",
     "@edgestore/react": "^0.1.4",
     "@edgestore/server": "^0.1.4",
     "@fontsource/poppins": "^5.2.6",
@@ -31,16 +31,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
-    "convex": "1.25.4",
+    "convex": "^1.25.4",
     "emoji-picker-react": "^4.5.7",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.321.0",
-    "next": "^15.3.4",
+    "lucide-react": "^0.539.0",
+    "next": "^15.4.6",
     "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
     "nprogress": "^0.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-dropzone": "^14.2.3",
     "react-tabs": "^6.1.0",
     "react-textarea-autosize": "^8.5.3",
@@ -49,7 +49,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
-    "zod": "^3.22.4",
+    "zod": "^4.0.17",
     "zustand": "^4.4.5"
   },
   "devDependencies": {
