--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.15",
+    "@ai-sdk/openai": "^2.0.19",
     "@blocknote/core": "^0.9.6",
     "@blocknote/react": "^0.9.6",
     "@clerk/nextjs": "^6.31.1",
@@ -29,17 +29,19 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
     "@vercel/analytics": "1.5.0",
+    "ai": "^5.0.22",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "convex": "^1.25.4",
     "emoji-picker-react": "^4.5.7",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.541.0",
     "next": "^15.4.6",
     "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
     "nprogress": "^0.2.0",
+    "openai": "^5.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.2.3",
