--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/poppins": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.4",
+    "@nanostores/react": "github:ai/react",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
