--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "nextjs": "^0.0.3",
     "nprogress": "^0.2.0",
     "openai": "^5.15.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-dropzone": "^14.2.3",
     "react-tabs": "^6.1.0",
     "react-textarea-autosize": "^8.5.3",
@@ -51,8 +51,7 @@
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.1",
-    "zod": "^4.0.17",
+    "zod": "3.25.76",
     "zustand": "^4.4.5"
   },
   "devDependencies": {
@@ -65,5 +64,8 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "5.9.2"
+  },
+  "overrides": {
+    "zod": "3.25.76"
   }
 }
