--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
     "@vercel/analytics": "1.5.0",
+    "ag-grid-community": "^34.2.0",
+    "ag-grid-react": "^34.2.0",
     "ai": "^5.0.22",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
