--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
+    "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.5.7",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
@@ -48,9 +49,11 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-dropzone": "^14.2.3",
+    "react-is": "^19.0.0",
     "react-tabs": "^6.1.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tooltip": "^5.29.1",
+    "recharts": "^2.15.0",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
