--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --hostname localhost",
+    "sync:services": "tsx scripts/sync-services.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -34,6 +35,7 @@
     "ag-grid-community": "^34.2.0",
     "ag-grid-react": "^34.2.0",
     "ai": "^5.0.22",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
@@ -54,9 +56,11 @@
     "react-textarea-autosize": "^8.5.3",
     "react-tooltip": "^5.29.1",
     "recharts": "^2.15.0",
+    "slugify": "^1.6.6",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^7.16.0",
     "zod": "3.25.76",
     "zustand": "^4.4.5"
   },
