--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --hostname localhost",
-    "sync:services": "tsx scripts/sync-services.ts",
+    "sync:services": "scripts/sync-services.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
