- Added MobileSentrix cheerio for fetching their current inventory item, item image, item price to display inside ETHUB Assistant to display cards similar to their UI. Removed Cart from cards, +++ Based on their current item price, ETHUB Assistant will add an additional $100 for labor and will offer user two types of options on all parts if available: Premium Quality and Aftermarket. Priority is set for premium but aftermarket will be optional. - Added Portal Invoices Page where all Pending, Completed, Delayed and Failed invoices will be categorized and displayed. - JWT Token with time limit per access. To access client page you will need a token every 15 minutes and refresh token for authentication. - Added create and list page for invoices

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ai-sdk/openai": "^2.0.19",
     "@blocknote/core": "0.37.0",
     "@blocknote/react": "0.37.0",
-    "@clerk/nextjs": "^6.31.1",
+    "@clerk/nextjs": "^6.33.3",
     "@edgestore/react": "^0.1.4",
     "@edgestore/server": "^0.1.4",
     "@fontsource/poppins": "^5.2.6",
@@ -38,10 +38,11 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "convex": "^1.25.4",
+    "convex": "^1.27.4",
     "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.5.7",
     "framer-motion": "^12.23.12",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.541.0",
     "next": "^15.4.6",
     "next-themes": "^0.2.1",
