feat: add MobileSentrix pricing API and update portal endpoints
- Added new API route `app/api/mobilesentrix/prices/routes.ts` for fetching part prices
- Added Convex table `convex/partsPrice.ts` to store and query part pricing
- Added new portal price route `app/api/portal/prices/route.ts`
- Renamed search/image routes to unify under portal API
- Updated `app/portal/page.tsx` and `components/assistant-launcher.tsx` to use new pricing endpoints
- Updated Convex schema and type definitions (`convex/schema.ts`, `_generated/api.d.ts`)
- Modified `convex/invoices.ts` to integrate with updated pricing logic
- Updated `package.json` and `package-lock.json` for new dependencies

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nextjs": "^0.0.3",
     "nprogress": "^0.2.0",
     "openai": "^4.104.0",
+    "pnpm": "^10.18.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-dropzone": "^14.2.3",
