--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -2,7 +2,7 @@ name: typecheck
 on:
   pull_request:
   push:
-    branches: [ main ]
+    branches: [ release/ollama-workspace ]
 
 permissions:
   contents: read
@@ -12,11 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with: { version: 9 }
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "pnpm"
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm -s typecheck || pnpm -s tsc --noEmit
+          cache: "npm"
+      - run: npm ci
+      - run: npm run typecheck || npx tsc
