--- a/.github/workflows/do-app-deploy.yml
+++ b/.github/workflows/do-app-deploy.yml
@@ -3,20 +3,45 @@ name: Deploy to DO App Platform
 on:
   push:
     branches: [ release/ollama-workspace ]
+
+permissions:
+  contents: read
+
+env:
+  APP_SPEC: app.yaml
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets. dop_v1_d4270a6c8d129d77e1e8924dedac9bd18342e7e8a3100d6ea52676a0e52a6dd2 }}
+
+      - name: Validate app spec
         run: |
-          curl -sL https://github.com/digitalocean/doctl/releases/latest/download/doctl-1.100.0-linux-amd64.tar.gz | tar -xz
-          sudo mv doctl /usr/local/bin
-      - name: Authenticate doctl
+          test -f "$APP_SPEC" || { echo "::error file=$APP_SPEC::Missing app spec"; exit 1; }
+          grep -q '^name:' "$APP_SPEC" || { echo "::error::Spec must include a top-level name"; exit 1; }
+
+      - name: Create or update app
+        id: deploy
         env:
-          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DO_ACCESS_TOKEN }}
-        run: doctl auth init -t $DIGITALOCEAN_ACCESS_TOKEN
-      - name: Deploy (manual: replace with your app spec)
+          DO_APP_ID: ${{ secrets.DO_APP_ID }}
         run: |
-          # use `doctl apps create --spec app.yaml` or `doctl apps update <app-id> --spec app.yaml`
-          echo "You still need to create or provide an app spec (app.yaml) for App Platform"
+          set -euo pipefail
+          if [ -n "${DO_APP_ID:-}" ]; then
+            doctl apps update "$DO_APP_ID" --spec "$APP_SPEC" --format ID,Spec.Name,UpdatedAt --no-header
+            echo "app_id=$DO_APP_ID" >> "$GITHUB_OUTPUT"
+          else
+            NEW_ID=$(doctl apps create --spec "$APP_SPEC" --format ID --no-header)
+            echo "app_id=$NEW_ID" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Show deployment status URL
+        run: |
+          APP_ID="${{ steps.deploy.outputs.app_id }}"
+          doctl apps get "$APP_ID" --format ID,Spec.Name,DefaultIngress,ActiveDeployment.ID,CreatedAt,UpdatedAt
+
