--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --hostname localhost",
-    "sync:services": "scripts/sync-services.ts",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -28,6 +27,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
@@ -41,15 +41,14 @@
     "convex": "^1.27.5",
     "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.5.7",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.541.0",
-    "next": "^15.4.6",
+    "next": "^15.5.6",
     "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
     "nprogress": "^0.2.0",
     "openai": "^4.104.0",
-    "pnpm": "^10.18.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-dropzone": "^14.2.3",
