--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mcp:terminal": "node scripts/terminal-mcp-agent.mjs"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.19",
@@ -38,6 +39,7 @@
     "ag-grid-community": "^34.2.0",
     "ag-grid-react": "^34.2.0",
     "ai": "^5.0.22",
+    "chalk": "^5.6.2",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
