--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "emoji-picker-react": "^4.5.7",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.541.0",
     "next": "^15.4.6",
     "next-themes": "^0.2.1",
