--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/poppins": "^5.2.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.4",
+    "@monaco-editor/react": "^4.7.0",
     "@nanostores/react": "github:ai/react",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -34,6 +35,9 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@shadcn/ui": "^0.0.4",
     "@vercel/analytics": "1.5.0",
     "ag-grid-community": "^34.2.0",
@@ -54,6 +58,7 @@
     "nextjs": "^0.0.3",
     "nprogress": "^0.2.0",
     "openai": "^4.104.0",
+    "postprocessing": "^6.38.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-dropzone": "^14.2.3",
@@ -66,6 +71,7 @@
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "undici": "^7.16.0",
     "zod": "3.25.76",
     "zustand": "^4.4.5"
