--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "TS_NODE_COMPILER_OPTIONS=\"{\\\"module\\\":\\\"CommonJS\\\",\\\"moduleResolution\\\":\\\"node\\\"}\" node --test -r ts-node/register/transpile-only",
     "mcp:terminal": "node scripts/terminal-mcp-agent.mjs"
   },
   "dependencies": {
@@ -47,7 +48,7 @@
     "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.5.7",
     "framer-motion": "^12.23.24",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.541.0",
     "next": "15.5.9",
     "next-themes": "^0.2.1",
@@ -74,11 +75,12 @@
     "@types/node": "20.19.9",
     "@types/react": "18.3.23",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.4.19",
+    "ts-node": "^10.9.2",
     "typescript": "5.9.2"
   },
   "overrides": {
