--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "emoji-picker-react": "^4.5.7",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.541.0",
     "next": "15.5.9",
     "next-themes": "^0.2.1",
